added power button, but not yet implemented

--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
 <div>hamburger</div>
@@ -13,6 +13,7 @@
 <div class="text">
     ~ $ A blog of a junior IT guy...<span class="caret"></span>
 </div>
+<a href="resume.html"> go to resume </a>
 
 </body>
 </html>
